# api-agendamento-tarefas

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
migrations/: env.py
migrations/versions/: da30af8304b1_create_users_table.py
src/app/: __init__.py  database.py  settings.py
src/app/models/: user_model.py
src/app/models/core/: abs_base_model.py  model_mixin.py  soft_delete.py  soft_delete_mixin.py
src/app/schemas/validators/: password.py  phone_number.py
src/app/schemas/validators/core/: validated_str.py  validator_mixin.py
